--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,8 @@ hr {
 .memeoji-class img {
     width: 250px;
     height: auto;
+    padding-right: 1.5rem;
+    padding-bottom: 1rem;
 }
 
 .resume-bttn {
@@ -260,6 +262,7 @@ hr {
     left: 1rem;
     bottom: 1.5rem;
     padding-left: 1rem;
+    z-index: 999;
 }
 
 .sm-bttns img {
@@ -270,4 +273,79 @@ hr {
     bottom: 1.5rem;
 }
 
+.projects-container {
+    display: flex;
+    flex-wrap:nowrap; /* Wrap the items to the next row when there's not enough space */
+    align-items: flex-start; /* Align items at the top */
+    padding-left: 1rem;
+    overflow-y: auto;
+}
 
+.date-header {
+    min-width: 180px; /* Adjust the width as needed */
+    font-weight: bold; /* Make the date header bold or customize styling */
+    float: left;
+    color: #9e9e9e;
+}
+
+.work-text {
+    font-size: 22px;
+    color: #6b6666;
+    flex-grow: 1; /*Allow the work-text to take up remaining space */
+    padding-right: 9rem;
+    width: 99.99%
+}
+
+.experience-title-11n {
+    position: relative;
+    text-align: left; /* Align the experience title to the left */
+    font-weight: bold; /* Make the experience title bold or customize styling */
+    margin-left: 2rem; /* Add margin to position it to the right of the date-header */
+    font-size: 18px;
+    display: inline-block;
+}
+
+.experience-container:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add a box shadow on hover */
+    border: 1px solid #ccc; /* Add a border on hover */
+    /* padding-bottom: 10px; Optional: Add padding to give some spacing around the content */
+    border-radius: 5px;
+}
+
+.date-header {
+    min-width: 180px;
+    font-weight: bold;
+    color: #9e9e9e;
+    font-size: 14px;
+}
+
+.experience-title-11n {
+    text-align: left;
+    font-weight: bold;
+    font-size: 18px;
+    display: inline-block;
+}
+
+.experience-text {
+    font-weight: normal;
+    font-size: 16px;
+    padding-top: 1rem;
+    width: 90%;
+    text-decoration: none;
+    color: #000
+}
+
+.experience-text-container {
+    
+}
+
+.experience-title-11n {
+    text-decoration: none; /* Remove underline */
+    color: #000; /* Set your desired text color */
+}
+
+.experience-link {
+    text-decoration: none;
+    display: block; /* Change the display property to 'block' to stack elements vertically */
+    margin-bottom: 20px; /* Add margin between the projects */
+}
