--- a/styles.css
+++ b/styles.css
@@ -277,21 +277,29 @@ hr {
     align-items: flex-start;
     padding-left: 1rem;
     overflow-y: auto;
+    justify-content: space-between;
 }
 
 .left-column {
     flex: 1;
-    padding-right: 1rem; 
 }
 
 .right-column {
-    flex: 1; 
+    flex: 1;
+    width: 49%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+}
+
+.left-column,
+.right-column {
+    width: 49%;
 }
 
 .date-header {
     font-weight: bold;
     color: #9e9e9e;
-    margin-left: -12rem;
     min-width: 170px;
     font-weight: bold;
     font-size: 14px;
@@ -301,8 +309,7 @@ hr {
     font-size: 19px;
     color: #6b6666;
     flex-grow: 1; 
-    padding-right: 9rem;
-    width: 65%
+    width: 100%
 }
 
 .experience-title-11n {
@@ -325,7 +332,6 @@ hr {
 .experience-text {
     font-weight: normal;
     font-size: 16px;
-    padding-top: 1rem;
     width: 90%;
     text-decoration: none;
     color: #000;
@@ -346,9 +352,13 @@ hr {
 .experience-container {
     display: flex;
     flex-direction: column;
+    transition: border,box-shadow 0.5s;
+    padding: 5px;
+    border: 1px solid #FFFFED;
 }
 
 .experience-content {
     display: flex;
+    gap: 0.5rem;
     flex-direction: column;
 }
