--- a/styles.css
+++ b/styles.css
@@ -510,8 +510,20 @@ hr {
         width: 100%;
         padding-top: 3.5rem;
         margin: auto;
-        padding-left: 1rem; /* Add this line */
-        padding-right: 1rem; /* Add this line */
-        
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    .memeoji-class {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        width: 100px;
+        height: auto;
+    }
+
+    .memeoji-class img {
+        width: 100%; 
+        height: auto;
     }
 }
