--- a/styles.css
+++ b/styles.css
@@ -520,6 +520,8 @@ hr {
         right: 0;
         width: 100px;
         height: auto;
+        z-index: 0;
+        padding-top: 2rem;
     }
 
     .memeoji-class img {
