--- a/styles.css
+++ b/styles.css
@@ -129,10 +129,10 @@ hr {
 }
 
 .memeoji-class img {
-    width: 250px;
+    /* width: 250px;
     height: auto;
     padding-right: 1.5rem;
-    padding-bottom: 1rem;
+    padding-bottom: 1rem; */
 }
 
 .resume-bttn {
@@ -247,7 +247,7 @@ hr {
     position: fixed;
     left: 1rem;
     bottom: 1.5rem;
-    padding-left: 1rem;
+    /* padding-left: 1rem; */
     z-index: 999;
 }
 
@@ -380,13 +380,18 @@ hr {
     height: auto;
 }
 
+.db-skill {
+    width: 250px;
+    height: auto;
+}
+
 #tooltip-image {
     opacity: 0;
     visibility: hidden;
     position: absolute;
-    left: -81vw;
-    top: -65vh;
-    width: 33.5vw;
+    left: -60vw;
+    top: -20rem;
+    width: 29vw;
     height: auto;
     border-radius: 15px;
     transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -397,6 +402,15 @@ hr {
 }
 
 #chartjs-skill:hover #tooltip-image {
+    opacity: 1;
+    visibility: visible;
+}
+
+#db-skill:hover {
+    background-color: #f7e2cd;
+}
+
+#db-skill:hover #tooltip-image {
     opacity: 1;
     visibility: visible;
 }
