--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #FFFFED;
+    max-width: 100%;
 }
 
 .container {
@@ -111,6 +112,8 @@ hr {
     font-size: 26px
 }
 
+/* ABOUT page */
+
 .about-me-title {
     padding-top: 6rem;
     padding-left: 1rem;
@@ -165,6 +168,38 @@ hr {
 .resume-bttn a:hover {
     background-color: #e5f9fc;
     color: #000;
+}
+
+.resume-display {
+    position: absolute;
+    top: 52%;
+    right: -1%;
+    transform: translateY(-50%);
+}
+
+.resume-display img {
+    width: auto;
+    max-width: 70%;
+    height: auto;
+    border-radius: 1.5%;
+}
+
+.resume-display button {
+    text-decoration: none;
+    border: 3.3px solid #010100;
+    border-radius: 6px;
+    padding: 5px;
+    color: #000;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    position: absolute;
+    top: 50%;
+    right: 25%;
+    display: inline-block;
+    z-index: 3;
+    background-color: transparent;
+    transition: background-color 0.3s;
+    cursor: pointer;
 }
 
 .contact-container-main {
@@ -251,12 +286,18 @@ hr {
     z-index: 999;
 }
 
+.sm-bttns {
+    position: fixed;
+    right: 1rem;
+    bottom: 1.5rem;
+    display: flex;
+    gap: 1rem;
+}
+
 .sm-bttns img {
     width: 3.5rem;
-    height: auto;
-    position: fixed;
-    right: 10rem;
-    bottom: 1.5rem;
+    height: 3.5rem;
+    object-fit: contain;
 }
 
 .projects-container {
@@ -541,5 +582,67 @@ hr {
     .memeoji-class img {
         width: 100%; 
         height: auto;
+    }
+
+    .resume-display {
+        opacity: 0%;
+    }
+
+    #local-time {
+        opacity: 0;
+    }
+}
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1300px) {
+
+    /* Center the resume button */
+    .resume-bttn {
+        position: absolute;
+        left: 50%; /* Start from the middle of the screen */
+        top: 50%;
+        transform: translate(-50%, -50%); /* Adjust for exact centering */
+        padding-top: 0; /* Remove padding-top if it's no longer needed */
+        padding-left: 0; /* Remove padding-left as it's no longer needed */
+    }
+
+    /* Adjust the image to be on the right */
+    .resume-display {
+        position: absolute;
+        top: 57.5%;
+        right: 2.5%; /* Adjust as needed to not stick to the edge */
+        transform: translateY(-50%); /* Keeps it vertically centered */
+        width: 33%; /* Adjust width as necessary */
+    }
+
+    .resume-display img {
+        width: 100%; /* Make the image take up the full width of its container */
+        height: auto; /* Maintain aspect ratio */
+        border-radius: 1.5%; /* Keeps the border-radius if needed */
+    }
+
+    .resume-display button {
+        text-decoration: none;
+        border: 3.3px solid #010100;
+        border-radius: 6px;
+        padding: 5px;
+        color: #000;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        position: absolute;
+        top: 50%;
+        right: 20%;
+        display: inline-block;
+        z-index: 3;
+        background-color: transparent;
+        transition: background-color 0.3s;
+        cursor: pointer;
+    }    
+
+    #local-time {
+        opacity: 0;
+    }
+
+    .contact-container button {
+        margin-bottom: 1rem;
     }
 }
